cleaning code for arxiv version

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 Dirichlet_Experiment/Bundestagswahlen
 Dirichlet_Experiment/Bundestagswahlen_Wahlbezirke
 Derivation_Bridges/figures
+Derivation_Bridges/Outsourcing_old_stuff.ipynb
+Derivation_Bridges/PSD_cone.ipynb
 Dirichlet_Experiment/figures
 Wishart_Experiment/figures
 Poisson_Experiment/figures
